# news-bot

./: .env-example  .gitignore  README.md  pm2-config.json  pyproject.toml
app/: main.py  publishing_schedule.json  test.py
app/core/: channel_poster.py  config.py  download_image.py  exceptions.py  get_news_full_text.py  models.py  news_rewriter.py  parse_news_feed.py  prepare_image.py  scheduler.py
app/core/sources/beincrypto_com/: parse_news_feed.py
app/core/sources/decrypt_co/: parse_news_feed.py
