[project]
name = "news-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15.0",
    "apscheduler>=3.11.0",
    "feedparser>=6.0.11",
    "lxml[html-clean]>=5.3.0",
    "newspaper3k>=0.2.8",
    "openai>=1.57.4",
    "pillow>=11.0.0",
    "pydantic-settings>=2.7.0",
    "python-dateutil>=2.9.0.post0",
]
